ghc-4335c07/testsuite/tests/backpack/should_fail/bkpfail29.bkp
unit p where
    signature A where
        data S
        type T = S
unit q where
    signature A where
        data T
        type S = T
unit r where
    dependency p[A=<A>]
    dependency q[A=<A>]
    module M where
        import A
        x :: S
        x = undefined
